#440: Added Cancellation Kind queries