@@ -18,53 +18,67 @@ package com.echothree.control.user.cancellationpolicy.server.command;
 
 import com.echothree.control.user.cancellationpolicy.common.form.GetCancellationKindsForm;
 import com.echothree.control.user.cancellationpolicy.common.result.CancellationPolicyResultFactory;
-import com.echothree.control.user.cancellationpolicy.common.result.GetCancellationKindsResult;
 import com.echothree.model.control.cancellationpolicy.server.control.CancellationPolicyControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.cancellationpolicy.server.entity.CancellationKind;
+import com.echothree.model.data.cancellationpolicy.server.factory.CancellationKindFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetCancellationKindsCommand
-        extends BaseSimpleCommand<GetCancellationKindsForm> {
+        extends BaseMultipleEntitiesCommand<CancellationKind, GetCancellationKindsForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.CancellationKind.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                ))
+        ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetCancellationKindsCommand */
     public GetCancellationKindsCommand(UserVisitPK userVisitPK, GetCancellationKindsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var cancellationPolicyControl = Session.getModelController(CancellationPolicyControl.class);
-        GetCancellationKindsResult result = CancellationPolicyResultFactory.getGetCancellationKindsResult();
-        
-        result.setCancellationKinds(cancellationPolicyControl.getCancellationKindTransfers(getUserVisit()));
-        
+    protected Collection<CancellationKind> getEntities() {
+        var cancellationControl = Session.getModelController(CancellationPolicyControl.class);
+
+        return cancellationControl.getCancellationKinds();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<CancellationKind> entities) {
+        var result = CancellationPolicyResultFactory.getGetCancellationKindsResult();
+
+        if(entities != null) {
+            var cancellationControl = Session.getModelController(CancellationPolicyControl.class);
+
+            if(session.hasLimit(CancellationKindFactory.class)) {
+                result.setCancellationKindCount(cancellationControl.countCancellationKinds());
+            }
+
+            result.setCancellationKinds(cancellationControl.getCancellationKindTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
     
